# ragpipe

./: MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  lint.yml  publish.yml  release.yml  tests.yml
docs/: api.md  index.md  installation.md  usage.md
examples/: demo.py
ragpipe/: __init__.py  chunking.py  cli.py  embeddings.py  loaders.py  pipeline.py
tests/: test_chunking.py
